[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/strenuous.black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GameplayUI/GameStartOverlay/GameStartOverlay.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameplayUI/GUI.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 23
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="GameplayGUI" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="GameStartOverlay" parent="." instance=ExtResource( 2 )]

[node name="TopScreenGUI" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -136.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 112.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TopScreenGUI"]
margin_right = 136.0
margin_bottom = 92.0

[node name="HBoxContainer" type="HBoxContainer" parent="TopScreenGUI/VBoxContainer"]
margin_right = 136.0
margin_bottom = 64.0

[node name="VBoxContainer" type="VBoxContainer" parent="TopScreenGUI/VBoxContainer/HBoxContainer"]
margin_right = 136.0
margin_bottom = 64.0
size_flags_horizontal = 3

[node name="TimerGUI" type="MarginContainer" parent="TopScreenGUI/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 136.0
margin_bottom = 64.0

[node name="HBoxContainer" type="HBoxContainer" parent="TopScreenGUI/VBoxContainer/HBoxContainer/VBoxContainer/TimerGUI"]
margin_right = 136.0
margin_bottom = 64.0

[node name="VSeparator" type="VSeparator" parent="TopScreenGUI/VBoxContainer/HBoxContainer/VBoxContainer/TimerGUI/HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 4.0
margin_bottom = 64.0
size_flags_horizontal = 3

[node name="TimerLabel" type="RichTextLabel" parent="TopScreenGUI/VBoxContainer/HBoxContainer/VBoxContainer/TimerGUI/HBoxContainer"]
margin_left = 8.0
margin_right = 136.0
margin_bottom = 64.0
rect_min_size = Vector2( 128, 64 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false

[node name="GameGUITimer" type="Timer" parent="TopScreenGUI/VBoxContainer/HBoxContainer/VBoxContainer/TimerGUI/HBoxContainer"]

[node name="CharacterGUI" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -112.0
margin_right = -20.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}
